[gd_scene load_steps=10 format=3 uid="uid://bwfdsr4jlrmph"]

[ext_resource type="Texture2D" uid="uid://b6rkpm24ese8" path="res://assets/player/parrot.png" id="1_qtpp4"]
[ext_resource type="Script" uid="uid://cnsb707h4jd4o" path="res://Scenes/Animal/Animal.gd" id="1_x85cc"]
[ext_resource type="AudioStream" uid="uid://edu8e4pgxcnb" path="res://assets/audio/stretch2.ogg" id="3_5swx0"]
[ext_resource type="AudioStream" uid="uid://d0dl5nb4b611t" path="res://assets/audio/catapult.ogg" id="4_fsxl2"]
[ext_resource type="AudioStream" uid="uid://2a65n34xyfu" path="res://assets/audio/kick_wood.ogg" id="5_dl82p"]
[ext_resource type="Texture2D" uid="uid://c50w56386h7be" path="res://assets/items/arrow.png" id="6_pf3qi"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_x85cc"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_vqphk"]
radius = 19.026299

[sub_resource type="LabelSettings" id="LabelSettings_756cb"]
font_size = 96
font_color = Color(0, 0, 0, 1)

[node name="Animal" type="RigidBody2D"]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_x85cc")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_x85cc")

[node name="Parrot" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_qtpp4")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_pf3qi")
offset = Vector2(150, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vqphk")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -17.0
offset_top = -80.0
offset_right = 272.0
offset_bottom = 52.0
scale = Vector2(0.12169853, 0.12057695)
text = "debug"
label_settings = SubResource("LabelSettings_756cb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_5swx0")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fsxl2")

[node name="KickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_dl82p")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
